# trait

./: README.md  setup.cfg
docsrc/: index.rst
trait/: __init__.py  util.py
