[metadata]
name = trait
version = 0.0.2
url = https://github.com/i2mint/trait
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
description = ML featurizer and transformer tools
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = trait

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scikit-learn